--- a/atividade_08.css
+++ b/atividade_08.css
@@ -1,3 +1,8 @@
 body {
      background-color: #84998b ; /* COR DE FUNDO */
 }
+
+img {
+     width: 100%;
+     height: 10vh; /*corresponde a 10% da visão do navegador */
+}
